# TaktOS

./: CONTRIBUTING.md  LICENSE  README.md
ARM/cm0/: PendSV_M0.S
ARM/cm0/Eclipse/: .cproject  .gitignore  .project
ARM/cm33/: PendSV_M33.S
ARM/cm4/: PendSV_M4.S
ARM/cm55/: PendSV_M55.S
ARM/cm7/: PendSV_M7.S
ARM/include/: TaktKernelCore.h  TaktKernelTick.h  TaktOSCriticalSection.h  takt_mpu.h  takt_mpu_v8m.h
ARM/src/: TaktKernelCM.cpp
Benchmark/: TaktOS_Benchmark_Report.docx  Thread-Metric_README.md
Benchmark/ThreadMetric/Zephyr/Zephyr_MessageProcessing/: CMakeLists.txt
RISCV/: README.md
docs/: TaktOS_Benchmark_Report.docx  TaktOS_Benchmark_Report_Public.docx  TaktOS_Standard_C_Cpp_Runtime.md  TaktOS_User_Reference.docx
examples/: Makefile  README.md  mpu_guard.c  verify_examples.sh
examples/basic/: basic_c.c  basic_cpp.cpp
examples/mutex/: mutex_pi.cpp  mutex_pi_c.c
examples/posix/: posix_pse51.c  posix_pse51_cpp.cpp
examples/queue/: producer_consumer.cpp  producer_consumer_c.c
examples/std/: std_c_threads.c
include/: TaktCompiler.h  TaktKernel.h  TaktOS.h  TaktOSMutex.h  TaktOSQueue.h  TaktOSSem.h  TaktOSThread.h  threads.h
include/cxx/: gthr-taktos.h  takt_cpp_runtime.h
include/posix/: mqueue.h  posix_types.h  pthread.h  ptimer.h  semaphore.h  time.h
src/: taktos.cpp  taktos_mutex.cpp  taktos_queue.cpp  taktos_sem.cpp  taktos_thread.cpp
src/posix/: clock.cpp  errno.cpp  mqueue.cpp  pthread.cpp  ptimer.cpp  sem.cpp
src/std/: cpp_runtime.cpp  threads.cpp
test/: mpu_guard.c  takt_arch_stub.cpp  test_kernel.cpp
(+789 files in other folders)
